# KoreanVocTester

./: .gitignore  CMakeLists.txt  README.md
data/: Words.sqlite  Words.txt
include/: AnswerScreen.hh  App.hh  DatabaseHandler.hh  FileParser.hh  MainMenu.hh  QuestionScreen.hh  Screen.hh  StringOps.hpp  Window.hh  Word.hpp
nuklear/: nuklear_allegro5.h
src/: AnswerScreen.cpp  App.cpp  DatabaseHandler.cpp  FileParser.cpp  MainMenu.cpp  QuestionScreen.cpp  Screen.cpp  Window.cpp  main.cpp
